--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "peerDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.50.0",
     "eslint": "^8.33.0",
+    "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-react": "^7.16.0",
     "eslint-plugin-react-hooks": "^2.0.1"
   }
