--- a/package.json
+++ b/package.json
@@ -2,12 +2,21 @@
   "name": "@vkontakte/eslint-plugin",
   "version": "1.1.1",
   "description": "eslint config from VK",
+  "keywords": [
+    "VK",
+    "ESLint",
+    "ESLint config"
+  ],
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "bumbledos@gmail.com",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/VKCOM/eslint-plugin.git",
+  },
   "engines": {
     "yarn": "^1.21.1"
   },
@@ -31,5 +40,13 @@
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-react": "^7.27.0",
     "eslint-plugin-react-hooks": "^4.3.0"
+  },
+  "peerDependenciesMeta": {
+    "eslint-plugin-react": {
+      "optional": true
+    },
+    "eslint-plugin-react-hooks": {
+      "optional": true
+    }
   }
 }
