--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/VKCOM/eslint-plugin.git",
+    "url": "https://github.com/VKCOM/eslint-plugin.git"
   },
   "engines": {
     "yarn": "^1.21.1"
